[tool.poetry]
name = "action-llm-agents"
version = "0.1.0"
description = ""
authors = ["Shota Totsuka <shota.totsuka@blueish.co.jp>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
